--- a/AndroidStudioProject/app/src/main/res/layout/list.xml
+++ b/AndroidStudioProject/app/src/main/res/layout/list.xml
@@ -8,6 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:divider="@drawable/divider2"
+        android:showDividers="end"
         android:gravity="center">
 
         <TextView
